<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz PVP</string>
    <string name="emote_button">Кнопка эмоций</string>
    <string name="waiting_for_opponent">Ожидание хода противника...</string>
    <string name="go_to_main_menu">В Главное меню</string>

    <string name="select_game_mode">Выбор игрового режима</string>
    <string name="single_player">Одиночная игра</string>
    <string name="two_players">PVP (Два игрока)</string>
    <string name="tap_to_continue">Нажмите, чтобы продолжить</string>
    <string name="play_button">Играть</string>
    <string name="shop_button">Магазин</string>
    <string name="stats">Статистика</string>
    <string name="settings_button">Настройки</string>
    <string name="exit">Выход</string>

    <string name="select_connection_type">Выберите тип подключения</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi_direct">Wi-Fi Direct</string>

    <string name="status_discovery_waiting">Поиск устройств...</string>
    <string name="start_discovery">Начать поиск</string>
    <string name="tap_to_connect">Нажмите для подключения</string>

    <string name="wins_format">Побед: %d</string>
    <string name="timer_format">%d с</string>
    <string name="current_points">%d оч.</string>

    <string name="your_score">Ваш счет: %d</string>
    <string name="opponent_score">Счет противника: %d</string>

    <string name="stat_points_format">Всего очков: %d</string>
    <string name="stat_single_wins_format">Побед (Solo): %d</string>
    <string name="stat_pvp_wins_format">Побед (PVP): %d</string>
    <string name="stat_emotes_format">Куплено эмоций: %d</string>
</resources>